Update project to .NET 9

--- a/Marketplace/appsettings.json
+++ b/Marketplace/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "Default": "Server=.\\SQLEXPRESS; Database=Marketplace;Trusted_Connection=True;MultipleActiveResultSets=True"
-  }
+  "AllowedHosts": "*"
 }
